Cibyl (17)
	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (16)
	* The syscall wrapper generator has now been integrated into the C++
	translator and therefore in the cibyl-mips2java step. The Makefile
	build rules have been changed to accomodate this, and the src/
	directory is now deprecated

	* Handle lables to instructions in delay slots safely and emit a
	warning for it (should never happen). Still just in the C++
	translator. Thanks to Eran Netanel for finding and debugging this

	* Added code to handle tail-call optimizations (jumps to other
	functions). This is still just in the C++ translator.

	* Better warning/error messages

	* Re-implemented most parts of the translator in C++. This
	improves compilation performance quite a bit and the bottleneck
	is now the Jasmin step. Not all optimizations are implemented in
	the C++ version yet. cibyl-mips2java will automatically use the
	C++ translator providing no optimizations are selected.

	The translation step is no longer the bottleneck, Jasmin now takes
	most time. With the new translator, Sarien compiles in around 20
	seconds totally instead of over one minute.

	* Add disabling of function pruning to workaround Cibyl bugs triggered
	by some versions of GCC

	* Check malloc return value in strdup

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sun Mar 16 08:38:42 CET 2008

Cibyl (15)
	* Fixed a bug with callbacks being published but not registered -
	this would lead to a call of address 0

	* Fixed a bug in fflush - the fn pointer could be called even if
	being NULL

	* A realloc bug was fixed - it didn't check for the return value

	* Added a --memory-debug option which will instrument all stores
	in the program. The cibyl_memdebug_start_addr and
	cibyl_memdebug_end_addr can be used to set the address range to
	check, by default it is 0...4

	* The stack pointer was set wrong: instead of setting it to
	memory_size, it was set to memory_size - stack_size, wasting 8KB
